# tiny-ntp-client

./: .clang-format  CMakeLists.txt  LICENSE  timestamp_format.c  timestamp_format.h
.github/workflows/: unit_test.yaml
docs/: timestamp_format.md
tests/: CMakeLists.txt  timestamp_format_test.cc
